# BMSTU-DS

./: README.md
lab_01/: Io.c  Io.h  LArif.c  LArif.h  main.c
lab_02/: CMakeLists.txt  data.txt  sort_cmp.c
lab_02/data_gen/: gen.py
lab_02/head/: error.h  show.h  show_table.h  show_table_io.h  sorts.h
lab_02/src/: error.c  main.c  show_table.c  show_table_io.c  sorts.c
lab_03/: CMakeLists.txt  cmp.c  error.c  error.h  gen.py  main.c  matrix.c  matrix.h  matrix_io.c  matrix_io.h
lab_03/data/: data1.txt
lab_04/: CMakeLists.txt  gen.py
lab_04/src/: calc.c  cmp.c  err.c  main.c  sl_list.c  stack.c
lab_05/: CMakeLists.txt
lab_05/src/: cmp.c  err.c  main.c  queues.c  queues_io.c  sl_list.c
lab_06/: CMakeLists.txt
lab_06/inc/: err.h  fl.h  hash_table.h  hash_table_io.h  sl_list.h  sl_list_io.h  tree.h  tree_io.h
lab_06/src/: err.c  fl.c  hash_table.c  hash_table_io.c  main.c  sl_list.c  sl_list_io.c  tree.c  tree_io.c
lab_07/: CMakeLists.txt
lab_07/inc/: err.h  graph.h  graph_io.h
lab_07/src/: err.c  graph.c  graph_io.c  main.c
