project(dts)

add_executable(lab_06
        src/main.c
        src/tree.c
        inc/tree.h
        src/hash_table.c
        inc/hash_table.h
        src/err.c
        inc/err.h
        src/tree_io.c
        inc/tree_io.h
        src/sl_list.c
        inc/sl_list.h
        src/hash_table_io.c
        inc/hash_table_io.h
        src/sl_list_io.c
        inc/sl_list_io.h
        src/fl.c inc/fl.h)
